# lrw-app

./: .gitignore  Cargo.toml  Embed.toml  README.MD  rust-toolchain.toml
.cargo/: config.toml
bootloader/: Cargo.toml  build.rs  memory.x
bootloader/src/: main.rs
src/: config.rs  lorawan.rs  main.rs  proto.rs  serial.rs
src/active/: mod.rs
src/activity/: device_info.rs  factory.rs  light.rs  mod.rs
src/utils/: mod.rs  qrcode.rs
